# CubaseSessionStateExplorer

./: .gitignore  LICENSE  README.md  pyproject.toml
data/observations/: demo_dualfilter.json  demo_routing.json  observations.jsonl
data/snapshots/: demo_session.snapshot.json  dualfilter_a.json  dualfilter_b.json  routing_a.json  routing_b.json
docs/: ARCHITECTURE.md  CPR_REVERSE_ENGINEERING_NOTEBOOK.md  CUBASE_ADAPTER_MAPPING.md  CUBASE_CAPABILITY_MATRIX.md  CUBASE_EXPORT_INSTRUCTIONS.md  CUBASE_FIXTURE_PROTOCOL.md  CUBASE_STATE_ONTOLOGY.md  EXTERNAL_RESEARCH_LEDGER.md  LIMITATIONS.md  MIDI_REMOTE_CAPABILITY_REPORT.md  PRIOR_PROTOTYPES_AUDIT.md  RESEARCH_ALIGNMENT.md  ROADMAP.md  STATE_SCHEMA.md  VALIDATION.md
fixtures/cubase/: demo_session.dawproject  dualfilter_a.dawproject  dualfilter_a.vstpreset  dualfilter_b.dawproject  dualfilter_b.vstpreset  folder_group.dawproject  manifest.json  notes.mid  opaque_a.dawproject  opaque_b.dawproject  routing_a.dawproject  routing_b.dawproject  score.musicxml  score_perf.mid  vca_sends.dawproject
runtime/: bridge_listener.py  cubase-state-probe.js
src/cubase_session_explorer/: __init__.py  app.py  audio_descriptors.py  bundle.py  cli.py  diff.py  fingerprint.py  fusion.py  graph_builder.py  ids.py  intervention.py  models.py  report.py  (+3 more)
tests/: conftest.py  test_canonical_export.py  test_dawproject_extractor.py  test_diff_and_experiment.py  test_extractors_and_robustness.py  test_fingerprint.py  test_prediction.py  test_preset_and_score.py  test_real_dawproject.py  test_vca_and_send_channels.py
tools/: make_fixtures.py
(+12 files in other folders)
