[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cubase-session-state-explorer"
version = "0.1.0"
description = "Cubase adapter for the cross-DAW Session State Explorer: interpretable, provenance-tracked, partially observable Cubase session graphs and state/audio interventions"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Zachary Scheffler" }]
keywords = ["cubase", "steinberg", "daw", "session-state", "dawproject", "graph", "interpretability", "mir"]

dependencies = [
    "pydantic>=2.5",
]

[project.optional-dependencies]
graph = ["networkx>=3.1"]
ui = ["streamlit>=1.32", "pandas>=2.0", "networkx>=3.1"]
audio = ["numpy>=1.24", "soundfile>=0.12", "librosa>=0.10", "pyloudnorm>=0.1.1"]
midi = ["mido>=1.3"]
full = ["cubase-session-state-explorer[graph,ui,audio,midi]"]
dev = ["pytest>=7.4"]

[project.scripts]
cubase-explorer = "cubase_session_explorer.cli:main"
cpr-lab = "cubase_session_explorer.extractors.cpr_lab:_cli"
preset-lab = "cubase_session_explorer.extractors.vstpreset:_cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
